sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: value or is not a member of Boolean
  while (cycleTri==false or longueur!=3) {
                         ^